# pidmon

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  customize.sh  module.prop  post-fs-data.sh  service.sh  system.prop  uninstall.sh  update.json
cmake/: android.toolchain.cmake
cpp/: CMakeLists.txt  main.cpp
docs/: FULL-CHANGELOG.md  author-note.md
legacy/: customize.sh  post-fs-data.sh  service.sh  uninstall.sh
legacy/mem-features/: conf_mi_reclaim.sh  tools.sh
legacy/src/: dynamic_mem.cpp
legacy/variants/: 3G_main.sh  6G_more_main.sh
mem-features/: PATHS.sh  TOOLS.sh  conf_mi_reclaim.sh  dynamic_swappiness.sh  fscc.sh  hybrid_swap.sh  intelligent_zram_writeback.sh  kswapd_oom_aff.sh  kswapd_oom_affinity.sh  lswap_conf.sh  paths.sh  tools.sh
mem_features/: TOOLS.sh  dynamic_swappiness.sh  intell_zram_writeback.sh
src/: Makefile  dynamic_mem.cpp  intelligent_zram_writeback.cpp
variants/: 3G_main.sh  4G_main.sh  6G_more_main.sh
